--- a/tatiya/4.sattami.md
+++ b/tatiya/4.sattami.md
@@ -4,35 +4,35 @@
 - **၂။** ဘဝေယျ, ဘဝေ, ဘဝေယျုံ၊ ဘဝေယျာသိ, ဘဝေ, ဘဝေယျာထ၊ ဘဝေယျာမိ, ဘဝေ, ဘဝေယျာမ။
 - **၃။** ဘဝေထ, ဘဝေရံ၊ ဘဝေထော, ဘဝေယျာဝှော၊ ဘဝေယျံ, ဘဝေ, ဘဝေယျာမှေ။
 
->ဘဝေယျ, ဘဝေ-ဖြစ်ရာ၏, ဖြစ်လောက်ရာ၏၊ ဘဝေ, ဘဝေယျံ- ဖြစ်ရပါလိ၏၊ သစေ ဘဝေယျံ-အကယ်၍ ဖြစ်အံ့၊ ဂစ္ဆေယျာသိ-သွားလိုသွားတော (ခွင့်ပြုခြင်း)၊ ဤသို့စသော အနက်များကိုလည်းကောင်း, ပဉ္စမီဝိဘတ်၌ ပြအပ်သော အနက်များကိုလည်းကောင်း သင့်တော်သလို သုံးစွဲနိုင်၏။
+>bhaveyya, bhave-ဖြစ်ရာ၏, ဖြစ်လောက်ရာ၏၊会成为 bhave, bhaveyyaṃ- ဖြစ်ရပါလိ၏会成为၊ sace bhaveyyaṃ-အကယ်၍ ဖြစ်အံ့如果成为၊ gaccheyyāsi-သွားလိုသွားတော走 (ခွင့်ပြုခြင်း)၊ ဤသို့စသော အနက်များကိုလည်းကောင်း, ပဉ္စမီဝိဘတ်၌ ပြအပ်သော အနက်များကိုလည်းကောင်း သင့်တော်သလို သုံးစွဲနိုင်၏။
 
->ဂစ္ဆေယျ, ဂစ္ဆေ-သွားရာ၏။ ။ပစေယျ, ပစေ-ချက်ရာ၏။ ။လဘေယျ, လဘေ-ရရာ၏။ ။သိယာ, အဿ-ဖြစ်ရာ၏၊(ဧယျ ဝိဘတ်)၊ သိယုံ, အဿု-ဖြစ်ကုန်ရာ၏၊(ဧယျုံ ဝိဘတ်)။ သစေ အဿထ-အကယ်၍ ဖြစ်ကုန်အံ့၊ (ဧယျာထ ဝိဘတ်)သစေ အဿံ-အကယ်၍ ဖြစ်အံ့၊(ဧယျာမိ ဝိဘတ်)။
+>gaccheyya, gacche-သွားရာ၏会走။ ။paceyya, pace-ချက်ရာ၏会煮။ ။labheyya, labhe-ရရာ၏会有။ ။siyā, assa-ဖြစ်ရာ၏၊会成为(ဧယျ ဝိဘတ်)၊ siyuṃ, assu-ဖြစ်ကုန်ရာ၏会成为၊(ဧယျုံ ဝိဘတ်)။ sace assatha-အကယ်၍ ဖြစ်ကုန်အံ့如果成为၊ (eyyātha ဝိဘတ်)sace assaṃ-အကယ်၍ ဖြစ်အံ့၊如果成为(ဧယျာမိ ဝိဘတ်)။
 
-- **၁။** အယံ ကုမာရော ဗုဒ္ဓေါ ဘဝေယျ။
-- **၂။** ဘောန္တော ဒါရကာ . . . တုမှေ ပဏ္ဍိတာ ဘဝေယျာထ။
-- **၃။** ဘန္တေ မယံ ဗာလာ န ဘဝေယျာမ။
-- **၄။** အဟံ ဘဝါဘဝေ ပိယော ဘဝေယျံ။
-- **၅။** အာဝုသော တွံ ဂါမံ ဂစ္ဆေယျာသိ။
-- **၆။** ဧဟိ အာဝုသော . . . ဂါမံ ပိဏ္ဍာယ ဂစ္ဆေယျာသိ။
-- **၇။** သစေ တုမှေ ပုညံ က‌ရေယျာထ၊ ပုညေန သုဂတိံ ပါပုဏေယျာဝှော။
-- **၈။** သစေ အယံ ဒါရကော ဗာလော အဿ၊ နိရယံ ပါပုဏေယျ။
+- **၁။** ayaṃ kumāro buddho bhaveyyā။
+- **၂။** bhonto dārakā . . . tumhepaṇḍitā bhaveyyātha။
+- **၃။** bhante mayaṃ bālā na bhaveyyāma။
+- **၄။** ahaṃ bhavābhave piyo bhaveyyaṃ။
+- **၅။** āvuso thaṃ gāmaṃ gaccheyyāsi။
+- **၆။** ehi āvuso . . . gāmaṃ piṇḍāya gaccheyyāsi။
+- **၇။** sace tumhe puññaṃ ka‌reyyātha， puññena sugatiṃ pāpuṇeyyāvho။
+- **၈။** sace ayaṃ dārako bālo assa， nirayaṃ pāpuṇeyyā။
 
 **<center>ပါဠိစီရန်</center>**
 
-- **(က)** ဤကလေးသည် အလိမ္မာ ဖြစ်စရာရှိ၏။
-- **(ခ)** သင်တို့သည် လူမိုက်များ မဟုတ်ကုန်ရာ။
-- **(ဂ)** ငါတို့သည် ဘဝတိုင်း လူလိမ္မာများ ဖြစ်ကြရပါလို၏။
+- **(က)** ဤကလေးသည် အလိမ္မာ ဖြစ်စရာရှိ၏။这小孩会听话。
+- **(ခ)** သင်တို့သည် လူမိုက်များ မဟုတ်ကုန်ရာ။你们不是坏人。
+- **(ဂ)** ငါတို့သည် ဘဝတိုင်း လူလိမ္မာများ ဖြစ်ကြရပါလို၏။我们每一世都会成为听话的人。
 - **(ဃ)** ငါ့ရှင် . . . သင် ကျောင်းသို့ လာခဲ့ပါလော။
-- **(င)** ငါ့ရှင် လာလော၊ မန္တလေးမြို့သို့ သွားချေလော။
-- **(စ)** ငါသည် အကယ်၍ လူမိုက် ဖြစ်အံ့၊ ငရဲသို့ ရောက်ရာ၏။
-- **(ဆ)** သင်တို့သည် အကယ်၍ ကောင်းမှု ပြုကုန်အံ့၊ နတ်ပြည်သို့ ရောက်ကုန်ရာ၏။ (ရောက်ကြစရာရှိ၏။)
+- **(င)** ငါ့ရှင် လာလော贤友来၊ မန္တလေးမြို့သို့ သွားချေလော去曼德勒吗？။
+- **(စ)** ငါသည် အကယ်၍ လူမိုက် ဖြစ်အံ့၊ ငရဲသို့ ရောက်ရာ၏။我如果成为了坏人就会下地狱。
+- **(ဆ)** သင်တို့သည် အကယ်၍ ကောင်းမှု ပြုကုန်အံ့၊ နတ်ပြည်သို့ ရောက်ကုန်ရာ၏။ (ရောက်ကြစရာရှိ၏။)你们如果做了善业回去到天界。
 
 ---
 
-- **(၁)** ဘဝေယျ-ဖြစ်ရာ၏။ 
-- **(၂)** ဘဝေယျာထ-ဖြစ်ကြလော။
-- **(၃)** န ဘဝေယျာမ-မဖြစ်လိုကုန်။
-- **(၄)** ဘဝေယျံ-ဖြစ်ရပါလို၏။
-- **(၅)** ဂစ္ဆေယျာသိ-သွားလော။
-- **(၆)** ဧဟိ-လာလော။
-- **(၇)** သစေ က‌ရေယျာထ-အကယ်၍ ပြုကုန်အံ့၊ သုဂတိံ-သုဂတိသို့(ကောင်းသော ဘဝသို့ )၊ပါပုဏေယျာဝှော-ရောက်ကုန်ရာ၏။
+- **(၁)** bhaveyyā-ဖြစ်ရာ၏။成为 
+- **(၂)** bhaveyyātha-ဖြစ်ကြလော။会吗
+- **(၃)** na bhaveyyāma-မဖြစ်လိုကုန်။不成为
+- **(၄)** bhaveyyaṃ-ဖြစ်ရပါလို၏။会成为
+- **(၅)** gaccheyyāsi-သွားလော။走吗
+- **(၆)** ehi-လာလော။来吗
+- **(၇)** sace ka‌reyyātha-အကယ်၍ ပြုကုန်အံ့如果成为၊ sugatiṃ-သုဂတိသို့善趣(ကောင်းသော ဘဝသို့ )၊pāpuṇeyyāvho-ရောက်ကုန်ရာ၏去到။
