--- a/tatiya/5.ktikyi.md
+++ b/tatiya/5.ktikyi.md
@@ -1,121 +1,121 @@
 ## <center>ဘော-ကံအနက်</center>
 
->**တဗ္ဗ, အနီယ။**  ။ဟောတဗ္ဗံ, ဘဝိတဗ္ဗံ ဘဝနီယံ-ဖြစ်ထိုက်၏, ဖြစ်သင့်၏, ဖြစ်ရာ၏။ ။ ဂန္တဗ္ဗံ, ဂမနီယံ-သွားအပ်၏, သွားသင့်၏, သွားထိုက်၏, သွားရာ၏။  ။ ကတ္တဗ္ဗံ, ကာတဗ္ဗံ, ကရဏီယံ-ပြုအပ်၏, ပြုသင့်၏, ပြုထိုက်၏, ပြုရာ၏။  ။ ဒဋ္ဌဗ္ဗံ-မှတ်အပ်, မှတ်သင့်, မှတ်ထိုက်၏။  ။ ဝေဒိတဗ္ဗံ-သိအပ်,သိသင့်, သိထိုက်၏။  ။ရမဏီယံ-မွေ့လျော်ထိုက်၏, မွေ့လျော်ဖွယ်ကောင်း၏, ပျော်စရာကောင်း၏။  ။ သောတဗ္ဗံ, သဝနီယံ-နာယူအပ်, နာယူသင့်, နာယူထိုက်၏။  ။ ပစိတဗ္ဗံ-ချက်အပ်, ချက်သင့်, ချက်ထိုက်၏, ချက်စရာ (မီးဖုတ်စရာ) ရှိ၏။
+>**တဗ္ဗ, အနီယ။**  ။hotabbaṃ, bhavitabbaṃ bhavanīyaṃ-ဖြစ်ထိုက်၏, ဖြစ်သင့်၏, ဖြစ်ရာ၏成为။ ။ gantabbaṃ, gamanīyaṃ-သွားအပ်၏, သွားသင့်၏, သွားထိုက်၏, သွားရာ၏走။  ။ kattabbaṃ, kātabbaṃ, karaṇīyaṃ-ပြုအပ်၏, ပြုသင့်၏, ပြုထိုက်၏, ပြုရာ၏变成။  ။ daṭṭhabbaṃ-မှတ်အပ်, မှတ်သင့်, မှတ်ထိုက်၏记住။  ။ veditabbaṃ-သိအပ်,သိသင့်, သိထိုက်၏知道။  ။ramaṇīyaṃ-မွေ့လျော်ထိုက်၏, မွေ့လျော်ဖွယ်ကောင်း၏, ပျော်စရာကောင်း၏高兴။  ။ sotabbaṃ, savanīyaṃ-နာယူအပ်, နာယူသင့်, နာယူထိုက်၏听။  ။ pacitabbaṃ-ချက်အပ်, ချက်သင့်, ချက်ထိုက်၏, ချက်စရာ煮 (မီးဖုတ်စရာ) ရှိ၏။
 
 **<center>လေ့ကျင့်ခန်း ပါဠိ</center>**
 
-- **၁။** သာမဏေရေနနာမ ဒန္တေန ဘဝိတဗ္ဗံ, န အဒန္တေန။
-- **၂။** မယာ မန္တလေးနဂရံ ဂန္တဗ္ဗံ, န စစ်ကုင်းဗ္ဗေတော။
-- **၃။** တယာ ကုသလံ ကာတဗ္ဗံ, န အကုသလံ။
-- **၄။** တုမှေဟိ ဣဒံ သန္နံဋ္ဌနံ ဒဋ္ဌဗ္ဗံ, အညံ န ဝေဒိတဗ္ဗံ။
-- **၅။** ဒေဝမနုဿေဟိ ဘဂဝတော ဇေတဝနံ ရမဏီယံ, န မနုဿာနံ ဂါမော ရမဏီယော။
-ဒန္တေန-ယဉ်ကျေးသူသည်၊ ဣဒံ သန္နိဋ္ဌာနံ-ဤ အဆုံးအဖြတ်ကို၊ အညံ-အခြား အဆုံးအဖြတ်ကို။
+- **၁။** sāmaṇerenanāma dantena bhavitabbaṃ, na adantena။
+- **၂။** mayā mantale”nagaraṃ gantabbaṃ, na cacyakuငya”bbeto။
+- **၃။** tayā kusalaṃ kātabbaṃ, na akusalaṃ။
+- **၄။** tumhehei idaṃ sannaṃṭṭhanaṃ daṭṭhabbaṃ, aññaṃ na veditabbaṃ။
+- **၅။** devamanussehi bhagavato jetavanaṃ ramaṇīyaṃ, na manussānaṃ gāmo ramaṇīyo။
+dantena-ယဉ်ကျေးသူသည်礼貌的人၊ idaṃ sanniṭṭhānaṃ-ဤ အဆုံးအဖြတ်ကို这件事၊ aññaṃ-အခြား အဆုံးအဖြတ်ကို其他事။
 
 **<center>ပါဠိစီရန်</center>**
 
-- **(က)** ငါသည် ယဉ်ကျေးသူ ဖြစ်ထိုက်၏။
-- **(ခ)** လူမိုက်သည် လူလိမ္မာ မဖြစ်ရာ။
-- **(ဂ)** ရဟန်းတို့သည် ဆွမ်းအလို့ငှာ ရွာသို့ သွားထိုက်၏။
-- **(ဃ)** လူတို့သည် နောင်အခါ၌ ချမ်းသာအလို့ငှာ ကောင်းမှုကိုပြုထိုက်၏။
-- **(င)** မြတ်စွာဘုရားသည် နတ်လူတို့အား တရားကို ဟောတော်မူထိုက်၏။
-- **(စ)** ငါသည် ရွာသို့ ဤလမ်းဖြင့် သွားထိုက်၏။
-- **(ဆ)** အကုသိုလ်ကို လူမိုက်တို့သည် ပြုထိုက်၏၊ လူလိမ္မာတို့သည်မပြုထိုက်။
-- **(ဇ)** ငါတို့၏ ကျောင်းတိုက်သည် ပျော်စရာကောင်း၏၊ သင်တို့၏ ရွာသည် ပျော်စရာမကောင်း။
-- **(ဈ)** တပည့်သည် ဆရာ၏ စကားကို နားထောင်ထိုက်၏၊ လူမိုက်၏ စကားကို နားမထောင်ထိုက်။
-- **(ည)** ရဟန်းသည် သပိတ်ကို မီးဖုတ်ထိုက်၏။[ရဟန်းမှာ သပိတ် မီးဖုတ်စရာ ရှိ၏။]
-- **(ဋ)** ငါတို့သည် ဤအဆုံးအဖြတ်ကို မှတ်ထိုက်၏။
-- **(ဌ)** ဆရာသည် တပည့်ကို သိထိုက်၏။
+- **(က)** ငါသည် ယဉ်ကျေးသူ ဖြစ်ထိုက်၏။我是礼貌的人。
+- **(ခ)** လူမိုက်သည် လူလိမ္မာ မဖြစ်ရာ။坏人不能成为听话的人。
+- **(ဂ)** ရဟန်းတို့သည် ဆွမ်းအလို့ငှာ ရွာသို့ သွားထိုက်၏။比库们为了钵食去到村子。
+- **(ဃ)** လူတို့သည် နောင်အခါ၌ ချမ်းသာအလို့ငှာ ကောင်းမှုကိုပြုထိုက်၏။以后人们想要幸福做善业。
+- **(င)** မြတ်စွာဘုရားသည် နတ်လူတို့အား တရားကို ဟောတော်မူထိုက်၏။佛陀给天人讲法。
+- **(စ)** ငါသည် ရွာသို့ ဤလမ်းဖြင့် သွားထိုက်၏။我走这条路去村子。
+- **(ဆ)** အကုသိုလ်ကို လူမိုက်တို့သည် ပြုထိုက်၏၊ လူလိမ္မာတို့သည်မပြုထိုက်။不善业是坏人做的听话的人不做。
+- **(ဇ)** ငါတို့၏ ကျောင်းတိုက်သည် ပျော်စရာကောင်း၏၊ သင်တို့၏ ရွာသည် ပျော်စရာမကောင်း။我在寺院很开心你们村子不开心。
+- **(ဈ)** တပည့်သည် ဆရာ၏ စကားကို နားထောင်ထိုက်၏၊ လူမိုက်၏ စကားကို နားမထောင်ထိုက်။弟子听从老师的话不听坏人的话。
+- **(ည)** ရဟန်းသည် သပိတ်ကို မီးဖုတ်ထိုက်၏။[ရဟန်းမှာ သပိတ် မီးဖုတ်စရာ ရှိ၏။]比库的钵需要熏。
+- **(ဋ)** ငါတို့သည် ဤအဆုံးအဖြတ်ကို မှတ်ထိုက်၏။我们记住了这件事。
+- **(ဌ)** ဆရာသည် တပည့်ကို သိထိုက်၏။老师知道弟子。
 
->**တ-ပစ္စည်း။**  ။ဘူတော-ဖြစ်ပြီ။  ။ဂတော-သွား၏, သွားပြီ, ရောက်၏, ရောက်ပြီ။  ။ရတော-မွေ့လျော်၏။  ။ အဘိရတော-အလွန်မွေ့လျော်၏, အလွန်ပျော်၏။  ။ ဇာတော-ဖြစ်ပြီ, မွေးဖွားပြီ။  ။ မတော-သေပြီ။  ။ ဌိတော-ရပ်နေ၏, တည်၏။  ။ပတ္တော-ရောက်ပြီ။  ။သိန္နော-ကွဲပြီ, ခွဲအပ်ပြီ။  ။ ဆိန္နော-ဖြတ်ပြီ, ဖြစ်အပ်ပြီ။  ။သင်္ကန်န္တော-ပြောင်းရွှေ့ပြီ။  ။ ဝိဗ္ဘန္တော-လူထွက်ပြီ။  ။ နိက္ခန္တော-ထွက်သွားပြီ။  ။ နိဋ္ဌိတော-ပြီးပြီ, ဆုံးပြီ။  ။ ဝဿံ-မိုးလပတ်လုံး။  ။ ဝုတ္တော (ဝုဋ္ဌော)-နေပြီ(နေပြီးပြီ။)
+>**တ-ပစ္စည်း။**  ။bhūto-ဖြစ်ပြီ成။  ။gato-သွား၏, သွားပြီ, ရောက်၏, ရောက်ပြီ走။  ။rato-မွေ့လျော်၏高兴။  ။ abhirato-အလွန်မွေ့လျော်၏, အလွန်ပျော်၏非常高兴။  ။ jāto-ဖြစ်ပြီ, မွေးဖွားပြီ出生။  ။ mato-သေပြီ死။  ။ ṭhito-ရပ်နေ၏站, တည်၏။  ။patto-ရောက်ပြီ။  ။sinno-ကွဲပြီ, ခွဲအပ်ပြီ။  ။ chinno-ဖြတ်ပြီ, ဖြစ်အပ်ပြီ။  ။saṅkanyanto-ပြောင်းရွှေ့ပြီ။  ။ vibbhanto-လူထွက်ပြီ还俗။  ။ nikkhanto-ထွက်သွားပြီ离开။  ။ niṭṭhito-ပြီးပြီ, ဆုံးပြီ完了။  ။ vassaṃ-မိုးလပတ်လုံး雨安居三个月။  ။ vutto (vuṭṭho)-နေပြီ住(နေပြီးပြီ။)
 
-- **၁။** ပုရိသော ဂါမံ ပါဒေန ဂတော။
-- **၂။** အဟံ ဗုဒ္ဓသာသန ရတော။
-- **၃။** မာတိတော ပုတ္တော ဇာတော။
-- **၄။** ပုတ္တော မတော၊ ပုတ္တေ မတေ ပိတာ ရောဒတိ။
-- **၅။** သာမဏေရော ဗုဒ္ဓသာသနေ န ရတော, ဝိဗ္ဘန္တော။
+- **၁။** puriso gāmaṃ pādena gato။
+- **၂။** ahaṃ buddhasāsana rato။
+- **၃။** mātito putto jāto။
+- **၄။** putto mato， putte mate pitā rodati။
+- **၅။** sāmaṇero buddhasāsane na rato, vibbhanto။
 
-- **(က)** အချိန်ကာလသည် လွန်သွားပြီ။
-- **(ခ)** သပိတ်သည် ကွဲပြီ။
-- **(ဂ)** လူတို့သည် ပြောင်းရွှေကြကုန်၏။
-- **(ဃ)** ငါတို့သည် မိုးလပတ်လုံး နေပြီးကုန်ပြီ။
+- **(က)** အချိန်ကာလသည် လွန်သွားပြီ။时间过去了。
+- **(ခ)** သပိတ်သည် ကွဲပြီ။钵碎了。
+- **(ဂ)** လူတို့သည် ပြောင်းရွှေကြကုန်၏။人们换。
+- **(ဃ)** ငါတို့သည် မိုးလပတ်လုံး နေပြီးကုန်ပြီ။我们入完雨安居。
 
->**ကံဟော(တ)။**  ။ကတော-ပြုအပ်၏, ပြုအပ်ပြီ။  ။ ဟတော-သတ်အပ်၏,(ပြီ)။  ။ပုရေက္ခတော-ရှေ့သွားပြုအပ်၏, ရှေ့ ၌ထားအပ်၏။  ။ ပရိဝုတော, ပရိဝါရိတော-ခြံရံအပ်၏, ဝန်းရံအပ်၏, ဝိုင်းအုံအပ်၏။  ။ ဒဍ္ဎော-လောင်အပ်၏။  ။ ဒဋ္ဌော-ကိုက်အပ်၏။  ။ အနုသိဋ္ဌော-သွန်သင်အပ်ပြီ (နည်းပေးလမ်းပြပြုအပ်ပြီ)။  ။ ဒိဋ္ဌော-မြင်အပ်ပြီ။  ။ ဝုသိတံ-ကျင့်သုံးအပ်ပြီ။  ။အန္နော-ဖုံးလွှမ်း(ဖုံးအုပ်)အပ်ပြီ။  ။ သုတော, သုတံ-ကြားအပ်, နာအပ်ပြီ။  ။ ဝုတ္တံ-ဆိုအပ်ပြီ။  ။လဒ္ဓေါ-ရအပ်ပြီ။  ။ ပုဋ္ဌော-မေးအပ်ပြီ။  ။ ပသဋ္ဌော-ချီးမွမ်းအပ်၏,(ပြီ)။  ။ဘုတ္တော-စားအပ်ပြီ။  ။ ပီတံ-သောက်အပ်ပြီ။
-
-**<center>လေ့ကျင့်ခန်း</center>**
-
-- **၁။** မယာ ပုညံ ကတံ, န ပါပံ။
-- **၂။** တယာ ပုရိသော ဟတော, မယာ န ဟတော။
-- **၃။** အာစရိယော သိဿေဟိ ပုရက္ခတော။
-- **၄။** ဗုဒ္ဓေါ ဘိက္ခုသံဃေန ပရိဝါရိတော။ 
-- **၅။** အဂ္ဂိနာ နရော ဒဍ္ဎော။
-
-- **(က)** ငါသည် သတို့သမီးကို မြင်အပ်ပြီ။
-- **(ခ)** ငါသည် သီလကို ကျင့်သုံးအပ်ပြီ။
-- **(ဂ)** လူမိုက်သည် မကောင်းမှုကို ဖုံးထားအပ်ပြီ။
-- **(ဃ)** ဆရာသည် ကိုရင်ကို သွန်သင်အပ်ပြီ။
-
->**ခ-ပစ္စည်း။**  ။ ဒုက္ကရံ-ခဲယဉ်းစွာ ပြုအပ်၏ (ခဲယဉ်းသဖြင့် ပြုအပ်၏)ပြုနိုင်ခဲ၏။  ။ ဒုလ္လဘော, ဒုလ္လဘံ-ခဲယဉ်းစွာ(သဖြင့်) ရအပ်၏, ရနိုင်ခဲ၏။  ။ ဒုဒ္ဒသံ-ခဲယဉ်းစွာ(သဖြင့်)မြင်အပ်၏, မြင်နိုင်ခဲ၏။ သုကရံ-လွယ်ကူစွာပြုအပ်၏, ပြုလွယ်၏။  ။ သုလဘံ-လွယ်ကူစွာရအပ်၏, ရလွယ်၏။  ။ သုဒသံ-လွယ်ကူစွာ မြင်အပ်၏, မြင်လွယ်၏။
+>**ကံဟော(တ)။**  ။kato-ပြုအပ်၏, ပြုအပ်ပြီ做။  ။ hato-သတ်အပ်၏,(ပြီ)杀။  ။purekkhato-ရှေ့သွားပြုအပ်၏, ရှေ့ ၌ထားအပ်၏已置在前面။  ။ parivuto, parivārito-ခြံရံအပ်၏, ဝန်းရံအပ်၏, ဝိုင်းအုံအပ်၏已包围，။  ။ daḍḍho-လောင်အပ်၏已烧။  ။ daṭṭho-ကိုက်အပ်၏咬။  ။ anusiṭṭho-သွန်သင်အပ်ပြီ (နည်းပေးလမ်းပြပြုအပ်ပြီ教育)။  ။ diṭṭho-မြင်အပ်ပြီ看见။  ။ vusitaṃ-ကျင့်သုံးအပ်ပ居住။  ။anno-ဖုံးလွှမ်း(ဖုံးအုပ်)အပ်ပြီ遮盖။  ။ suto, sutaṃ-ကြားအပ်, နာအပ်ပြီ听到။  ။ vuttaṃ-ဆိုအပ်ပြီ说။  ။laddho-ရအပ်ပြီ获得။  ။ puṭṭho-မေးအပ်ပြီ问။  ။ pasaṭṭho-ချီးမွမ်းအပ်၏,(ပြီ)称赞။  ။bhutto-စားအပ်ပြီ吃။  ။ pītaṃ-သောက်အပ်ပြီ喝။
 
 **<center>လေ့ကျင့်ခန်း</center>**
 
-- **၁။** ဗာလေန ပုညံ ဒုက္ကရံ, ပါပံ သုကရံ။
-- **၂။** ပဏ္ဍိတေန ပါပံ ဒုက္ကရံ, ပုညံ သုကရံ။
-- **၃။** လောကသ္မိံ မနုဿဘာဝေါ ဒုလ္လဘော, န သုလဘော။
-- **၄။** ပရေသံ ဝဇ္ဇံ သုဒသံ, အတ္တနော ဝဇ္ဇံ ဒုဒ္ဒသံ။
+- **၁။** mayā puññaṃ kataṃ, na pāpaṃ။
+- **၂။** tayā puriso hato, mayā na hato။
+- **၃။** ācariyo sissehi purakkhato။
+- **၄။** buddho bhikkhusaṅghena parivārito။ 
+- **၅။** agginā naro daḍḍho။
 
-- **(က)** ငါ့ရှင် . . . လောက၌ လူ့အဖြစ် ရလွယ်၏လော။
-- **(ခ)** လောက၌ လူ့အဖြစ် မရလွယ်ပါ အရှင်ဘုရား။
-- **(ဂ)** ငါ့ရှင် . . . လူမိုက်သည် ကောင်းမှုကို ပြုလွယ်သလော။
-- **(ဃ)** လူမိုက်သည် ကောင်းမှုကို မပြုလွယ်ပါ အရှင်ဘုရား။
-- **(င)** ငါ့ရှင် . . . သူများရဲ့ အပြစ်ကို မမြင်လွယ်ဖူးလား။
-- **(စ)** မှန်ပါ . . . မြင်လွယ်ပါသည် အရှင်ဘုရား။
-- **(ဆ)** ပါ့ရှင် . . . ကိုယ့်အပြစ်ကို မြင်ခဲသည် မဟုတ်လော။
+- **(က)** ငါသည် သတို့သမီးကို မြင်အပ်ပြီ။ 我看见女人。
+- **(ခ)** ငါသည် သီလကို ကျင့်သုံးအပ်ပြီ။ 我依戒而住
+- **(ဂ)** လူမိုက်သည် မကောင်းမှုကို ဖုံးထားအပ်ပြီ။ 坏人遮挡住不善业。
+- **(ဃ)** ဆရာသည် ကိုရင်ကို သွန်သင်အပ်ပြီ။ 老师教育弟子。
+
+>**ခ-ပစ္စည်း။**  ။ dukkaraṃ-ခဲယဉ်းစွာ ပြုအပ်၏ (ခဲယဉ်းသဖြင့် ပြုအပ်၏)ပြုနိုင်ခဲ၏不容易做的။  ။ dullabho, dullabhaṃ-ခဲယဉ်းစွာ(သဖြင့်) ရအပ်၏, ရနိုင်ခဲ၏难获得的။  ။ duddasaṃ-ခဲယဉ်းစွာ(သဖြင့်)မြင်အပ်၏, မြင်နိုင်ခဲ၏难理解的။ sukaraṃ-လွယ်ကူစွာပြုအပ်၏, ပြုလွယ်၏容易的။  ။ sulabhaṃ-လွယ်ကူစွာရအပ်၏, ရလွယ်၏容易获得的။  ။ sudasaṃ-လွယ်ကူစွာ မြင်အပ်၏, မြင်လွယ်၏容易见者။
+
+**<center>လေ့ကျင့်ခန်း</center>**
+
+- **၁။** bālena puññaṃ dukkaraṃ, pāpaṃ sukaraṃ။
+- **၂။** paṇḍitena pāpaṃ dukkaraṃ, puññaṃ sukaraṃ။
+- **၃။** lokasmiṃ manussabhāvo dullabho, na sulabho။
+- **၄။** paresaṃ vajjaṃ sudasaṃ, attano vajjaṃ duddasaṃ။
+
+- **(က)** ငါ့ရှင် . . . လောက၌ လူ့အဖြစ် ရလွယ်၏လော။ 贤友在这世间上成为人简单吗？
+- **(ခ)** လောက၌ လူ့အဖြစ် မရလွယ်ပါ အရှင်ဘုရား။ 尊者在世间成为不简单。
+- **(ဂ)** ငါ့ရှင် . . . လူမိုက်သည် ကောင်းမှုကို ပြုလွယ်သလော။ 贤友坏人做善业简单吗？
+- **(ဃ)** လူမိုက်သည် ကောင်းမှုကို မပြုလွယ်ပါ အရှင်ဘုရား။ 尊者坏人做善业不简单。
+- **(င)** ငါ့ရှင် . . . သူများရဲ့ အပြစ်ကို မမြင်လွယ်ဖူးလား။ 贤友看见别人的问题简单吗？
+- **(စ)** မှန်ပါ . . . မြင်လွယ်ပါသည် အရှင်ဘုရား။ 是的尊者简单。
+- **(ဆ)** ငါ့ရှင် . . . ကိုယ့်အပြစ်ကို မြင်ခဲသည် မဟုတ်လော။ 贤友看见自己的问题了吗？
 
 
->**တဝေ, တုံ-ပစ္စည်း။**  ။ ဂန္တဝေ, ဂန္တု-သွားခြင်းငှာ။  ။ ကာတဝေ, ကာတုံ-ပြုခြင်းငှာ။  ။ ဘဝိတုံ-ဖြစ်ခြင်းငှာ။  ။ ဒဋ္ဌုံ-မြင်ခြင်းငှာ။  ။ ရမိတုံ-မွေးလျော်ခြင်းငှာ။  ။ ပစီတုံ-ချက်ခြင်းငှာ။  ။ ပတ္တုံ-ရောက်ခြင်းငှာ။  ။သောတုံ-နာခြင်းငှာ။  ။ ဝသိတုံ-နေခြင်းငှာ။  ။ဆိန္ဒိတုံ-ဖြတ်ခြင်းငှာ။  ။ ဘိန္ဒိတုံ-ခွဲခြင်းငှာ။  ။ ဝန္ဒိတုံ-ရှိခိုးခြင်းငှာ။  ။ စရိတုံ-လှည့်လည်ခြင်းငှာ။[“ခြင်းငှာ” အစား ”ဖို့ရာ” လည်းပေး။]
+>**တဝေ, တုံ-ပစ္စည်း။**  ။ ဂန္တဝေ, gantu-သွားခြင်းငှာ走။  ။ kātave, kātuṃ-ပြုခြင်းငှာ做။  ။ bhavituṃ-ဖြစ်ခြင်းငှာ成为။  ။ daṭṭhuṃ-မြင်ခြင်းငှာ看见။  ။ ramituṃ-မွေးလျော်ခြင်းငှာ高兴။  ။ pacītuṃ-ချက်ခြင်းငှာ煮။  ။ pattuṃ-ရောက်ခြင်းငှာ到။  ။sotuṃ-နာခြင်းငှာ听။  ။ vasituṃ-နေခြင်းငှာ住။  ။chindituṃ-ဖြတ်ခြင်းငှာ斩断။  ။ bhindituṃ-ခွဲခြင်းငှာ分开။  ။ vandituṃ-ရှိခိုးခြင်းငှာ礼敬။  ။ carituṃ-လှည့်လည်ခြင်းငှာ观察者။[“ခြင်းငှာ” အစား ”ဖို့ရာ” လည်းပေး။]
 
 ## <center>လေ့ကျင့်ခန်း</center>
 
-- **၁။** ဒါရကော ပုညံ ကာတုံ ဝိဟာရံ  ဂစ္ဆတိ။
-- **၂။** ဒါရိကာ ဓမ္မံ သောတုံ ဣစ္ဆတိ။
-- **၃။** တွံ သိပ္ပံ သိက္ခိတုံ ဣစ္ဆသိ။
-- **၄။** မယံ ဗုဒ္ဓံ ဝန္ဒိတုံ ဝိဟာရံ ဂမိဿာမ။
-- **၅။** အာဝုသော . . . ဧထ, ပိဏ္ဍာယ စရိတုံ ဂါမံ ပဝိသိဿာမ။
+- **၁။** dārako puññaṃ kātuṃ vihāraṃ  gacchati။
+- **၂။** dārikā dhammaṃ sotuṃ icchati။
+- **၃။** thaṃ sippaṃ sikkhituṃ icchasi။
+- **၄။** mayaṃ buddhaṃ vandituṃ vihāraṃ gamissāma။
+- **၅။** āvuso . . . etha, piṇḍāya carituṃ gāmaṃ pavisissāma။
 
-- **(က)** သင်သည် တရား နာခြင်းငှာ အလိုမရှိ။
-- **(ခ)** ငါတို့သည် အတတ် သင်ခြင်းငှာ အလိုရှိပါကုန်၏။
-- **(ဂ)** သင်တို့သည် ဘုရား ရှိခိုးခြင်းငှာ ကျောင်းသို့ လာခဲ့ကြကုန်လော။
-- **(ဃ)**ငါသည် မြို့သို့ သွားဖို့ရာ ထမင်း ချက်နေ၏။
+- **(က)** သင်သည် တရား နာခြင်းငှာ အလိုမရှိ။ 你不需要听法。
+- **(ခ)** ငါတို့သည် အတတ် သင်ခြင်းငှာ အလိုရှိပါကုန်၏။ 我们需要学习知识。
+- **(ဂ)** သင်တို့သည် ဘုရား ရှိခိုးခြင်းငှာ ကျောင်းသို့ လာခဲ့ကြကုန်လော။ 你们需要来寺院上晚课。
+- **(ဃ)**ငါသည် မြို့သို့ သွားဖို့ရာ ထမင်း ချက်နေ၏။ 我要想做饭在去城市。
 
 
->**တုန, တွာန, တွာ။**  ။ ဟုတွာ-ဖြစ်၍(ဖြစ်ပြီး၍)။  ။ကာတုန, ကတွာန, ကတွာ-ပြု၍။  ။ဒတွာ-ပေး၍(လှူ၍)။  ။သုတွာန, သုတွာ-ကြား၍, နာ၍။  ။ဂန္တုန, ဂန္တာန, ဂန္တာ-သွား၍။  ။ ဘုတွာန, ဘုတွာ-စား၍။  ။ ပစိတုန, ပစိတွာန, ပစိတွာ-ချက်၍။  ။ တန္ဒိတွာန, ဝန္ဒိတွာ-ရှိခိုး၍။ [၍-ဟုပေးသမျှ၌ ထိုကိစ္စက ပြုပြီးဖြစ်လျှင် “ပြီ၍” ဟု ပေးပါ။]
+>**တုန, တွာန, တွာ။**  ။ huthā-ဖြစ်၍(ဖြစ်ပြီး၍)成为။  ။kātuna, kathāna, kathā-ပြု၍做။  ။dathā-ပေး၍(လှူ၍)给။  ။suthāna, suthā-ကြား၍, နာ၍听။  ။gantuna, gantāna, gantā-သွား၍走။  ။ bhuthāna, bhuthā-စား၍吃။  ။ pacituna, pacithāna, pacithā-ချက်၍煮။  ။ tandithāna, vandithā-ရှိခိုး၍礼敬။ [၍-ဟုပေးသမျှ၌ ထိုကိစ္စက ပြုပြီးဖြစ်လျှင် “ပြီ၍” ဟု ပေးပါ။]
 
 **<center>လေ့ကျင့်ခန်း</center>**
 
-- **၁။** မနုဿာ ဒါနံ ဒတွာ သဂ္ဂံ ပါပုဏိဿန္တိ။
-- **၂။** သာမဏေရာ သီလံ သမာဒိယိတွာ သုဂတိံ ဂစ္ဆိဿန္တိ။
-- **၃။** ဒါရကာ သိပ္ပံ သိက္ခိတွာ ပဏ္ဍိတာ ဘဝိဿန္တိ။
-- **၄။** အဟံ ဗုဒ္ဓံ ဝန္တိတွာ ပိဏ္ဍာယ ဂါမံ ပဝိသိတုံ ဂမိဿာမိ။
-- **၅။** ဗာလာ ပါပံ ကတွာန နိရယေ ပစ္စိဿန္တိ။
+- **၁။** manussā dānaṃ dathā saggaṃ pāpuṇissanti။
+- **၂။** sāmaṇerā sīlaṃ samādiyithā sugatiṃ gacchissanti။
+- **၃။** dārakā sippaṃ sikkhithā paṇḍitā bhavissanti။
+- **၄။** ahaṃ buddhaṃ vantithā piṇḍāya gāmaṃ pavisituṃ gamissāmi။
+- **၅။** bālā pāpaṃ kathāna niraye paccissanti။
 
-- **(က)** သတို့သမီးသည် ထမင်း ချက်ပြီး၍ စား၏။
-- **(ခ)** ငါသည် ထမင်း စားပြီး၍ အိပ်တော့အံ့။
+- **(က)** သတို့သမီးသည် ထမင်း ချက်ပြီး၍ စား၏။ 女人煮完在吃。
+- **(ခ)** ငါသည် ထမင်း စားပြီး၍ အိပ်တော့အံ့။ 我吃完饭睡觉。
 - **(ဂ)** သင်တို့သည် အိပ်ပြီး၍ အတတ်ကို သင်ကြလော။
-- **(ဃ)** ကိုရင်တို့သည် ဆွမ်းခံ လှည့်လည်ပြီး၍ ကျောင်းသို့လာကြလိမ့်မည်။
-- **(င)** ကလေးသည် ကျောင်း၌ နေ၍ စာအံလိမ့်မည်။
+- **(ဃ)** ကိုရင်တို့သည် ဆွမ်းခံ လှည့်လည်ပြီး၍ ကျောင်းသို့လာကြလိမ့်မည်။ 沙弥们托完钵回寺院。
+- **(င)** ကလေးသည် ကျောင်း၌ နေ၍ စာအံလိမ့်မည်။ 小孩住在学校将会朗读。
 - **(စ)** သင်တို့သည် ဘုရား ရှိခိုးပြီး၍(ပြီးမှ) အိပ်ကြလော။
 
->**မာန, အန္တ။**  ။ ဘဝမာနော, ဘဝန္တော-ဖြစ်လသော်, ဖြစ်စဉ်။  ။ သမာနော, သန္တော-ဖြစ်လသော(ဖြစ်စဉ်)။  ။ ဂစ္ဆမာနော, ဂစ္ဆန္တော-သွားလသော်, သွားစဉ်။  ။ ပစမာနော, ပစန္တော-ချက်လသော်, ချက်စဉ်။  ။ ကရောန္တော-ပြုလသော်,(ပြုစဉ်)။ ဝိဟရ‌န္တော-နေလသော်,(နေစဉ်)။  ။ဝန္ဒမာနော, ဝန္ဒန္တော-ရှိခိုးလသော်။ [လသော်-ဟု ပေးရာ၌ “လတ်သော်” ဟုလည်းပေးကြ၏၊ စဉ်-ဟုပေးရာ၌ “တုန်း, ခိုက်, တုန်းက” ဟုလည်းပေးနိုင်၏။]
+>**မာန, အန္တ။**  ။ bhavamāno, bhavanto-ဖြစ်လသော်, ဖြစ်စဉ်成为။  ။ samāno, santo-ဖြစ်လသော(ဖြစ်စဉ်)成为။  ။ gacchamāno, gacchanto-သွားလသော်, သွားစဉ်做။  ။ pacamāno, pacanto-ချက်လသော်, ချက်စဉ်煮။  ။ karonto-ပြုလသော်,(ပြုစဉ်)煮။ vihara‌nto-နေလသော်,(နေစဉ်)住။  ။vandamāno, vandanto-ရှိခိုးလသော်礼敬။ [လသော်-ဟု ပေးရာ၌ “လတ်သော်” ဟုလည်းပေးကြ၏၊ စဉ်-ဟုပေးရာ၌ “တုန်း, ခိုက်, တုန်းက” ဟုလည်းပေးနိုင်၏။]
 
 **<center>လေ့ကျင့်ခန်း</center>**
 
-- **၁။** တွံ ဂါမံ ဂစ္ဆန္တော ပိဏ္ဍံ လဘိဿသိ။
-- **၂။**  အဟံ ပိဏ္ဍံ လဘမာနော ဘုဉ္ဇိဿာမီ။
-- **၃။** ဒါရိကာ ဘတ္တံ ပစမာနာ ဗုဒ္ဓံ စိတ္တေန ဝန္ဒတိ။
-- **၄။** ဒါရကော ဘတ္တံ ဘုဉ္ဇမာနော သယိတုံ ဣစ္ဆတိ။
-- **၅။** အာစရိယော အမရပုရနဂ‌ရေ မဟာဂန္ဓာရာမေ ဝိဟရန္တော ဣမံ ပါဠိသိက္ခံ လိခတိ။
+- **၁။** thaṃ gāmaṃ gacchanto piṇḍaṃ labhissasi။
+- **၂။**  ahaṃ piṇḍaṃ labhamāno bhuñjissāmī။
+- **၃။** dārikā bhattaṃ pacamānā buddhaṃ cittena vandati။
+- **၄။** dārako bhattaṃ bhuñjamāno sayituṃ icchati။
+- **၅။** ācariyo amarapuranaga‌re mahāgandhārāme viharanto imaṃ pāḷisikkhaṃ likhati။
 
-- **(က)** ငါသည် ကလေး ဖြစ်တုန်းက ဤကျေင်း၌ နေ၏။
-- **(ခ)** သင်သည် အတတ်ကို သင်ယူစဉ် ဆရာ၏ စကားကို နားထောင်ပါလော။
-- **(ဂ)** လိမ္မာသူသည် ကောင်းမှု ပြုလသော် နိဗ္ဗာန် ရောက်ဖို့ ပြု၏။
-- **(ဃ)** ငါသည် မန္တလေးမြို့ မဟာဝိသုဒ္ဓါတိုက်၌ နေစဉ် ပါဠိသိက္ခာကိုသင်ဘူခဲ့ပြီ။
+- **(က)** ငါသည် ကလေး ဖြစ်တုန်းက ဤကျောင်း၌ နေ၏။ 我是小孩的时候在这寺院住。
+- **(ခ)** သင်သည် အတတ်ကို သင်ယူစဉ် ဆရာ၏ စကားကို နားထောင်ပါလော။ 你学习知识的时候有听老师的话吗。
+- **(ဂ)** လိမ္မာသူသည် ကောင်းမှု ပြုလသော် နိဗ္ဗာန် ရောက်ဖို့ ပြု၏။ 听话的人做了善业能到涅槃。
+- **(ဃ)** ငါသည် မန္တလေးမြို့ မဟာဝိသုဒ္ဓါတိုက်၌ နေစဉ် ပါဠိသိက္ခာကိုသင်ဘူခဲ့ပြီ။ 我曼德勒省mahāvisuddhā寺院居住学过pāḷisikkhā。
