--- a/tatiya/6.nipta.md
+++ b/tatiya/6.nipta.md
@@ -2,41 +2,42 @@
 
 >**[ဆောင်]** စေဝနှင့် စ, စုဏ္ဏိယမှာ, ရှေ့မှာ စေဝ, နောက်မှာ စ, ဂါထာဟူက, မမြဲကြ။
 
-- **၁။** ဗုဒ္ဓေါ လောကေ ဥပ္ပဇ္ဇတိ၊ သော စ (ထိုဘုရားသည်လည်း) ဓမ္မံ ဒေသေတိ၊ တံ ဓမ္မံ ‌ဒေဝါ စေဝ မနုဿာ စ သုဏန္တိ။
-- **၂။** ဗဟူ ဒေဝါ မနုဿ စ, မင်္ဂလာနိ အစိန္တယုံ။
-- **၃။** အဟံ ဗုဒ္ဓဉ္စ ဓမ္မဉ္စ, သံဃဉ္စ သရဏံ ဂတော။
-- **၄။** အသေဝနာ စ ဗာလာနံ, ပဏ္ဍိတာနဉ္စ သေဝနာ၊ ပူဇာ စ ပူဇနီယာနံ, ဧတံ မင်္ဂလာ.မုတ္တမံ။
+- **၁။** buddho loke uppajjati ၊ so ca (ထိုဘုရားသည်လည်း) dhammaṃ deseti၊ taṃ dhammaṃ ‌devā ceva manussā ca suṇanti။
+- **၂။** bahū devā manussa ca, maṅgalāni acintayuṃ။
+- **၃။** ahaṃ buddhañca dhammañca, saṅghañca saraṇaṃ gato။
+- **၄။** asevanā ca bālānaṃ, paṇḍitānañca sevanā၊ pūjā ca pūjanīyānaṃ, etaṃ maṅgalā.muttamaṃ။
 
-- **(က)** ငါသည် ဘုရားကိုလည်းကောင်း, တရားကိုလည်းကောင်း, သံဃာကိုလည်းကောင်း ရှိခိုး၏။
-- **(ခ)** များစွာကုန်သော နတ်တို့သည်လည်းကောင်း, လူတို့သည်လည်းကောင်း ဘုရားကို ကိုးကွယ်ရာဟူ၍ ဆည်းကပ်ကြကုန်၏။
+- **(က)** ငါသည် ဘုရားကိုလည်းကောင်း, တရားကိုလည်းကောင်း, သံဃာကိုလည်းကောင်း ရှိခိုး၏။ 我礼敬佛法僧。
+- **(ခ)** များစွာကုန်သော နတ်တို့သည်လည်းကောင်း, လူတို့သည်လည်းကောင်း ဘုရားကို ကိုးကွယ်ရာဟူ၍ ဆည်းကပ်ကြကုန်၏။ 很多天人和人们信佛和靠近。
 - **(ဂ)** လူမိုက်တို့ကို မှီဝဲ(ပေါင်းသင်း)ခြင်းသည်လည်းကောင်း, လူလိမ္မာတို့ကို မမှီဝဲ (မပေါင်းသင်း) ခြင်းသည်လည်းကောင်း, ပူဇော်ထိုက်သူတို့ကို မပူဇော်ခြင်းသည်လည်းကောင်း, ဤသုံးပါသည် အမင်္ဂလာသာတည်း။ [အပူဇာ-မပူဇော်ခြင်း၊ အဝမင်္ဂလံ-အမင်္ဂလာိ။]
 
 
 >**ပိ,အပိ။**  ။ စ သဒ္ဒါကဲ့သို့ “လည်း, လည်းကောင်း=၎င်း” ဟု ပေးရသော ပိ, အပိသဒ္ဒါများလည်း ရှိသေး၏၊ ထို “လည်း, လည်းကောင်း=၎င်း” အနက်တို့သည် တစ်ခုနှင့်တစ်ခု ရောနှောပေါင်းဆည်းခြင်း အနက်ကို ဟော၏၊ မြန်မာလို “သူလည်း, သူလဲ သွား၏” ဟုဆိုရာ၌ “သူရော သွား၏=သူပါ သွား၏” ဟု ဆိုလိုသည်။
 
-- **၁။** ဗာလော ဒါနံ န ဒေတိ, သီလံပိ (သီလကိုလည်း) န ရက္ခတိ။
-- **၂။** အဟံ ‌ဗုဒ္ဓံပိ, သံဃံပိ သရဏံ ဂတော။[“ဘုရားကိုလည်းကောင်း, တရားကိုလည်းကောင်း, သံဃာကိုလညိးကောင်း” ဟုပေး]
+- **၁။** bālo dānaṃ na deti, sīlaṃpi (သီလကိုလည်း) na rakkhati။
+- **၂။** ahaṃ ‌buddhaṃpi, saṅghaṃpi saraṇaṃ gato။[“ဘုရားကိုလည်းကောင်း, တရားကိုလည်းကောင်း, သံဃာကိုလညိးကောင်း” ဟုပေး]
 -   ထို ပိ,အပိတို့သည် တစ်ခါတစ်ရံ မြှောက်ပင့်ခြင်း အနက်ကိုလည်းဟော၏။[“သမ္ဘာဝနာ-”ဟု ခေါ်၏။]
-- **၃။** ဗုဒ္ဓေါပိ ဓမ္မံ ဉတွာ ဗုဒ္ဓဘာဝံ ဂတော။[ဘုရားသော်မှလည်း(ဘုရားတော်မှလည်း) ထိုတရားကို သိ၍ (သိမှ) ဘုရားအဖြစ်သို့ရောက်ရသည်၊ ”တရားတော်ဟာ ဘယ်လောက် မြင့်မြတ်သလဲ” ဟူလို၊ ဤ၌ ဘုရားကိုလည်း မြှောက်, တရားကိုလည်း မြှောက်သည်။]
-- **၄။** အပိ ဒိဗ္ဗေသု ကာမေသု, ရတိံ သော နာဓိဂစ္ဆတိ။ [နတ်တို့ ၌ဖြစ်ကုန်သော ကာမတို့ ၌သော်မှလည်း(နတ်ကာမတောင်မှ)သူသည်မွေ့လျော်ခြင်းကို မရ၊ “လူ့ကာမလောက်တော့ ဘာပြောစရာရှိတော့မလဲ”ဟူလို၊ ဤ၌ နတ်ကာမကိုလည်းကောင်း, ထိုကာမဂုဏ်၌မ‌ပျော်သူကိုလည်းကောင်း မြှောက်သည်။]
+- **၃။** buddhopi dhammaṃ ñathā buddhabhāvaṃ gato။[ဘုရားသော်မှလည်း(ဘုရားတော်မှလည်း) ထိုတရားကို သိ၍ (သိမှ) ဘုရားအဖြစ်သို့ရောက်ရသည်၊ ”တရားတော်ဟာ ဘယ်လောက် မြင့်မြတ်သလဲ” ဟူလို၊ ဤ၌ ဘုရားကိုလည်း မြှောက်, တရားကိုလည်း မြှောက်သည်။]
+- **၄။** api dibbesu kāmesu, ratiṃ so nādhigacchati။ [နတ်တို့ ၌ဖြစ်ကုန်သော ကာမတို့ ၌သော်မှလည်း(နတ်ကာမတောင်မှ)သူသည်မွေ့လျော်ခြင်းကို မရ၊ “လူ့ကာမလောက်တော့ ဘာပြောစရာရှိတော့မလဲ”ဟူလို၊ ဤ၌ နတ်ကာမကိုလည်းကောင်း, ထိုကာမဂုဏ်၌မ‌ပျော်သူကိုလည်းကောင်း မြှောက်သည်။]
 
 
 >တစ်ခါတစ်ရံ(ဂရဟာ-ဟု ခေါ်အပ်သော)နှိပ်ခြင်း အနက်ကိုလည်းဟောသေး၏။
-
-- **၅။** သာမိကေန ရှူးရှူးတိ ဥဿာဟိယမာနော သုနခေါပိ ဍံသတိ။[သခင်က ရှူးရှူးလို့ အားတက်စေအပ်သည်ရှိသော် ခွေးသော်မှလည်း(ခွေးတောင်မှ)ကိုက်တတ်သေး၏၊ “သင်တို့ဟာ အားတက်အောင်ပြောပေးပါလျက် ဘာ့ကြောင့် အားမတက်ကြသလဲ”ဟူလို။]
-- **၆။** သာရထိနာ ပါဇီယမာနော ဂေါဏောပိ ဥဇုမဂ္ဂံ ဂစ္ဆတိ။
-[လှည်းမောင်းသူက မောင်းပေးအပ်သည်ရှိသော် နွားသော်မှလည်းလမ်းမှန်ကို သွားသေး၏၊ “သင်တို့ဟာ ဆရာက ဆုံးမနေပါလျက် ဘာ့ကြောင့် ဖြေင့်ဖြေင့် မလုပ်ကြသလဲ”ဟူလို]
+ရှူးရှူးတိ
+- **၅။** sāmikena ရှူးရှူးတိ ussāhiyamāno sunakhopi ḍaṃsati။[သခင်က ရှူးရှူးလို့ အားတက်စေအပ်သည်ရှိသော် ခွေးသော်မှလည်း(ခွေးတောင်မှ)ကိုက်တတ်သေး၏၊ 主人嘘嘘的加油狗都会咬起来。“သင်တို့ဟာ အားတက်အောင်ပြောပေးပါလျက် ဘာ့ကြောင့် အားမတက်ကြသလဲ”ဟူလို။]
+- **၆။** sārathinā pājīyamāno goṇopi ujumaggaṃ gacchati။
+[လှည်းမောင်းသူက မောင်းပေးအပ်သည်ရှိသော် နွားသော်မှလည်းလမ်းမှန်ကို သွားသေး၏၊ 车夫开车牛都会走正确的路。 “သင်တို့ဟာ ဆရာက ဆုံးမနေပါလျက် ဘာ့ကြောင့် ဖြေင့်ဖြေင့် မလုပ်ကြသလဲ”ဟူလို]
 ဤ၌ ခွေး,နွားတို့ကိုလည်းကောင်း, အားတက်သရော မရှိသူ, ဖြေင့်ဖြေင့် မလုတ်သူများကိုလည်းကောင်း နှိပ်သည်။
 
 >**ဝါ သဒ္ဒါ။**  ။ ဝါ သဒ္ဒါသည် တစ်ခါတစ်ရံ (စ-ပိ သဒ္ဒါတို့ကဲ့သို့) ”လည်း, လည်းကောင်း” ဟု ပေးရသော သမုစ္စည်းအနက်ကိုဟော၏။
 
->**၁။** ရာဇတော ဝါ စောရတော ဝါ အာရက္ခံ ဂဏှန္တု။ [မင်းဘေးမှလည်းကောင်း, ခိုးသူဘေးမှလည်းကောင်း, အစောင့်အရှာက်ကိုယူကြပါကုန်။]
+>**၁။** rājato vā corato vā ārakkhaṃ gaṇhantu။ [မင်းဘေးမှလည်းကောင်း, ခိုးသူဘေးမှလည်းကောင်း, အစောင့်အရှာက်ကိုယူကြပါကုန်။ ？？？]
 
 >တစ်ခါတစ်ရံ တွဲဖက် ၂ ခု ၃ ခု စသည်တွင် တစ်ခုခုသာရသော”ဝိကပ်” အနက်ကိုလည်း ဟော၏၊ အနက်ကို “သော်လည်း”ဟုပေးကြ၏။
-- **၂။** ဣဒံ ဘတ္တံ အမှာကံ ဒွိန္နံ န ပဟောတိ, တွံ ဝါ ဘုဉ္ဇဿု, အဟံ ဝါ ဘုဉ္ဇိဿာမိ။[ဤထမင်းသည် ငါတို့  ၂ ယောက်အားမလောက်၊ သင်သော်လည်း စားပါ၊ သင် မစားလျှင် ငါသော်လည်းစားလိမ့်မည်။]
+- **၂။** idaṃ bhattaṃ amhākaṃ dhinnaṃ na pahoti, thaṃ vā bhuñjassu, ahaṃ vā bhuñjissāmi။[ဤထမင်းသည် ငါတို့  ၂ ယောက်အားမလောက်၊ သင်သော်လည်း စားပါ၊ သင် မစားလျှင် ငါသော်လည်းစားလိမ့်မည်။ 
+- 这饭不够我们两吃你吃吗你不吃我吃。]
 
 >**ဧဝ သဒ္ဒါ။ ** ။ ဧဝ သဒ္ဒါသည် တွဲဖက် ၂ ခု ရှိလျှင် အခြား တစ်ခုကိုကန့်ကွက်၏၊ အနက်ကို “သာလျှင်”ဟု ပေးရ၏၊ ကတ့်ကွက်စရာမရှိလျှင် မိမိအနက်ကို မြဲစေ၏၊ အနက်ကို “ပင်လျှင်” ဟု ပေးရသည်။
-သစေ ဣဒံ သတ္တံ အမှကံ ဒွိန္နံ န ပဟောတိ၊ တွံ မာဘုဉ္ဇာဟိ, အဟမေဝ ဘုဉ္ဇိဿာမိ။ [ဤထမင်းသည် ငါတို့  ၂ ယောက်အားအကယ်၍ မလောက်အံ့၊ (ထိုသို့ မလောက်လျှင်) သင် မစားနှင့်, ငါသာ စားရမည်။]
+sace idaṃ sattaṃ amhakaṃ dhinnaṃ na pahoti， thaṃ mābhuñjāhi, ahameva bhuñjissāmi။ [ဤထမင်းသည် ငါတို့  ၂ ယောက်အားအကယ်၍ မလောက်အံ့၊ (ထိုသို့ မလောက်လျှင်) သင် မစားနှင့်, ငါသာ စားရမည်။ 如果这饭不够我们吃你不要吃让我吃。]
 - **မာ သဒ္ဒါ။**  ။ မာသဒ္ဒါသည်(န)သဒ္ဒါကဲ့သို့ တားမြစ်ဖြင်း ပတိသေဓအနက်ကို ဟော၏။
 
 >မာ တေ ဘဝန္တွန္တရာယာ။ [တေ-သင့်အား၊ အန္တရာယာ-အန္တရာယ်တို့သည်၊ မာ ဘဝန္တု-မဖြစ်ပါစေကုန်သတည်း။]
@@ -59,7 +60,7 @@
 **<center>တတိယအခန်း<br>မူလတန်း ပါဠိသိက္ခာ ပြီး၏</center>**
 
 
->**အမှာ။**  ။ ပါဠိဘာသာသည် မြတ်စွာဘုရား၏ ပိဋကတ်တောလာဘာသာတစ်ရပ်ဖြစ်၍ အကုန်အစင် နှံ့စပ်အောင် မညွှန်ပြနိုင်ပါ၊ ပါဠိလေ့လာမည့် စာသင်သားတို့ အခြေခံ ရရုံမျှသာ ညွှန်ပြထားပါသည်။
+>**အမှာ။**  ။ ပါဠိဘာသာသည် မြတ်စွာဘုရား၏ ပိဋကတ်တောလာဘာသာတစ်ရပ်ဖြစ်၍ အကုန်အစင် နှံ့စပ်အောင် မညွှန်ပြနိုင်ပါ၊ ပါဠိလေ့လာမည့် စာသင်သားတို့ အခြေခံ ရရုံမျှသာ ညွှန်ပြထားပါသည်။ 
 
 >ဤမျှလောက်ကို အခြေခံ၍ မူလတန်း သဒ္ဒါကိုလည်း အတော်ကြေအောင် လေ့လာပြီးသော စာသင်သားတို့သည် ဓမ္မပဒအဋ္ဌကထကိုလည်းကောင်း, အင်္ဂုတ္ထိုရ်,ဝိနည်းပါဠိတော်ကို (မဟာဟာဝါကစ၍)လည်းကောင်းသင်ယူရပါမူဆရာ့ အကူညီဖြင့် သင်ယူနိုင်လောက်ပါပြီ။
 
